Updated to use pyproject.toml and remove setup.py and requirements.txt

--- a/scenarios/desaster_application_template.ipynb
+++ b/scenarios/desaster_application_template.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "# DESaster Application Template\n",
-    "Last updated March 2018"
+    "Last updated August 2025"
    ]
   },
   {
@@ -25,37 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
      "id": "efe0367b-ecea-4f68-8747-3507afa0a7e4"
     }
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "read_excel() got an unexpected keyword argument 'sheetname'. Did you mean 'sheet_name'?",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 31\u001b[39m\n\u001b[32m     29\u001b[39m desaster_path = \u001b[33m\"\u001b[39m\u001b[33m/Users/megan612/Desktop/DESaster\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;66;03m# <-- Change this for your path\u001b[39;00m\n\u001b[32m     30\u001b[39m sys.path.append(desaster_path)\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdesaster\u001b[39;00m \u001b[38;5;66;03m# hacky, revisit later\u001b[39;00m\n\u001b[32m     32\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdesaster\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mio\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *\n\u001b[32m     33\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdesaster\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mstructures\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/DESaster/desaster/__init__.py:7\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# -*- coding: utf-8 -*-\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[33;03mdesaster package initiation file.\u001b[39;00m\n\u001b[32m      4\u001b[39m \n\u001b[32m      5\u001b[39m \u001b[33;03m@author: Scott Miles (milessb@uw.edu)\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdesaster\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m entities, structures, hazus, financial, technical, policies, io\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdesaster\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mio\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m importEntities, importSingleFamilyResidenceStock, output_summary\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdesaster\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mhazus\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m setStructuralDamageValueHAZUS, setContentsDamageValueHAZUS\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/DESaster/desaster/entities.py:31\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# -*- coding: utf-8 -*-\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[33;03mCopyright (C) 2018  Scott B. Miles, milessb@uw.edu, scott.miles@resilscience.com\u001b[39;00m\n\u001b[32m      4\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m     29\u001b[39m \u001b[33;03m@author: Scott Miles (milessb@uw.edu)\u001b[39;00m\n\u001b[32m     30\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdesaster\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mstructures\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SingleFamilyResidential, Building\n\u001b[32m     32\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdesaster\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mhazus\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m setContentsDamageValueHAZUS\n\u001b[32m     33\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnames\u001b[39;00m,\u001b[38;5;250m \u001b[39m\u001b[34;01mwarnings\u001b[39;00m,\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/DESaster/desaster/structures.py:28\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# -*- coding: utf-8 -*-\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[33;03mCopyright (C) 2018  Scott B. Miles, milessb@uw.edu, scott.miles@resilscience.com\u001b[39;00m\n\u001b[32m      4\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m     25\u001b[39m \u001b[33;03m@author: Scott Miles (milessb@uw.edu)\u001b[39;00m\n\u001b[32m     26\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdesaster\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mhazus\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m setStructuralDamageValueHAZUS, setRecoveryLimitState\n\u001b[32m     29\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m     30\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mwarnings\u001b[39;00m,\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m,\u001b[38;5;250m \u001b[39m\u001b[34;01mdistutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutil\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/DESaster/desaster/hazus.py:40\u001b[39m\n\u001b[32m     36\u001b[39m hazus_parameters_file = module_path + \u001b[33m\"\u001b[39m\u001b[33m/config/hazus_building_lookup_tables.xlsx\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     38\u001b[39m \u001b[38;5;66;03m# Building repair time lookup table from HAZUS-MH earthquake model technical\u001b[39;00m\n\u001b[32m     39\u001b[39m \u001b[38;5;66;03m# manual Table 15.9 (http://www.fema.gov/media-library/assets/documents/24609)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m40\u001b[39m building_repair_times = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_excel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhazus_parameters_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m     41\u001b[39m \u001b[43m                            \u001b[49m\u001b[43msheetname\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mRepair times\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m     42\u001b[39m \u001b[43m                            \u001b[49m\u001b[43mindex_col\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mOccupancy\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     44\u001b[39m \u001b[38;5;66;03m# Structural damage value ratio lookup table from HAZUS-MH earthquake model technical\u001b[39;00m\n\u001b[32m     45\u001b[39m \u001b[38;5;66;03m# manual Table 15.2 (http://www.fema.gov/media-library/assets/documents/24609)\u001b[39;00m\n\u001b[32m     46\u001b[39m structural_damage_ratios = pd.read_excel(hazus_parameters_file, \n\u001b[32m     47\u001b[39m                                 sheetname=\u001b[33m'\u001b[39m\u001b[33mStruct. Repair Cost \u001b[39m\u001b[38;5;132;01m% o\u001b[39;00m\u001b[33mf value\u001b[39m\u001b[33m'\u001b[39m, \n\u001b[32m     48\u001b[39m                                 index_col=\u001b[33m'\u001b[39m\u001b[33mOccupancy\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[31mTypeError\u001b[39m: read_excel() got an unexpected keyword argument 'sheetname'. Did you mean 'sheet_name'?"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# System modules\n",
     "import sys\n",
     "from datetime import datetime\n",
     "from IPython.display import display\n",
     "from ipywidgets import Dropdown\n",
-    "\n",
+    "from pathlib import Path\n",
     "\n",
     "# Data analysis modules\n",
     "import pandas as pd\n",
@@ -78,9 +62,7 @@
     "from folium import Map, FeatureGroup, Marker, LayerControl\n",
     "\n",
     "# DESaster Modules\n",
-    "desaster_path = \"/Users/megan612/Desktop/DESaster\" # <-- Change this for your path\n",
-    "sys.path.append(desaster_path)\n",
-    "import desaster # hacky, revisit later\n",
+    "import desaster\n",
     "from desaster.io import *\n",
     "from desaster.structures import *\n",
     "from desaster.financial import *\n",
@@ -104,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -125,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -134,7 +116,7 @@
    },
    "outputs": [],
    "source": [
-    "owners_df = pd.read_excel(scenario_file, sheetname='owners')"
+    "owners_df = pd.read_excel(scenario_file, sheet_name='owners')"
    ]
   },
   {
@@ -146,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -155,7 +137,7 @@
    },
    "outputs": [],
    "source": [
-    "renters_df = pd.read_excel(scenario_file, sheetname='renters')"
+    "renters_df = pd.read_excel(scenario_file, sheet_name='renters')"
    ]
   },
   {
@@ -182,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -207,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -232,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -265,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -311,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -349,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -374,14 +356,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
      "id": "0a1a343c-01a9-43a3-9309-fb83ddc13acc"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'ix'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[32m/var/folders/1l/bwjmhfhd57ddyrfdw7nl60kh0000gq/T/ipykernel_17162/1548557327.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m owners = importEntities(env, owners_df, \u001b[33m'OwnerHousehold'\u001b[39m, owned_stock, write_story)\n",
+      "\u001b[32m~/Desktop/DESaster/desaster/io.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(env, entities_df, entity_type, building_stock, write_story)\u001b[39m\n\u001b[32m    141\u001b[39m         \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;28;01min\u001b[39;00m entities_df.index:\n\u001b[32m    142\u001b[39m             if entities_df.iloc[i]['Occupancy'].lower() in ['single family house', 'single family home', \n\u001b[32m    143\u001b[39m                                     \u001b[33m'single family dwelling'\u001b[39m, \u001b[33m'single family residence'\u001b[39m,\n\u001b[32m    144\u001b[39m                                     \u001b[33m'sfr'\u001b[39m, \u001b[33m'sfh'\u001b[39m, \u001b[33m'sfd'\u001b[39m, \u001b[33m'mobile home'\u001b[39m]:\n\u001b[32m--> \u001b[39m\u001b[32m145\u001b[39m                 real_property = SingleFamilyResidential(\n\u001b[32m    146\u001b[39m                                                     occupancy = entities_df.iloc[i][\u001b[33m'Occupancy'\u001b[39m],\n\u001b[32m    147\u001b[39m                                                     tenure = entities_df.iloc[i][\u001b[33m'Tenure'\u001b[39m],\n\u001b[32m    148\u001b[39m                                                     address = entities_df.iloc[i][\u001b[33m'Address'\u001b[39m],\n",
+      "\u001b[32m~/Desktop/DESaster/desaster/structures.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, owner, occupancy, tenure, address, longitude, latitude, value, cost, area, bedrooms, bathrooms, listed, damage_state, building_stock)\u001b[39m\n\u001b[32m    123\u001b[39m         Inheritance:\n\u001b[32m    124\u001b[39m         structures.Building\n\u001b[32m    125\u001b[39m         \"\"\"\n\u001b[32m    126\u001b[39m \n\u001b[32m--> \u001b[39m\u001b[32m127\u001b[39m         Building.__init__(self, owner, occupancy, tenure, address, longitude,\n\u001b[32m    128\u001b[39m                         latitude, value, cost, area,\n\u001b[32m    129\u001b[39m                         listed, damage_state, building_stock)\n\u001b[32m    130\u001b[39m \n",
+      "\u001b[32m~/Desktop/DESaster/desaster/structures.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, owner, occupancy, tenure, address, longitude, latitude, value, cost, area, listed, damage_state, building_stock)\u001b[39m\n\u001b[32m     83\u001b[39m         self.permit = \u001b[38;5;28;01mFalse\u001b[39;00m  \u001b[38;5;66;03m# Whether the building has a permit\u001b[39;00m\n\u001b[32m     84\u001b[39m         self.assessment = \u001b[38;5;28;01mFalse\u001b[39;00m  \u001b[38;5;66;03m# Whether the building has had engineering assessment\u001b[39;00m\n\u001b[32m     85\u001b[39m \n\u001b[32m     86\u001b[39m         \u001b[38;5;66;03m# Use HAZUS lookup tables to assign damage value.\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m87\u001b[39m         setStructuralDamageValueHAZUS(self)\n\u001b[32m     88\u001b[39m         self.damage_value_start = self.damage_value \u001b[38;5;66;03m# Archive original damage value\u001b[39;00m\n\u001b[32m     89\u001b[39m \n\u001b[32m     90\u001b[39m         \u001b[38;5;66;03m# Set Burton et al. recovery-based limit state\u001b[39;00m\n",
+      "\u001b[32m~/Desktop/DESaster/desaster/hazus.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(building)\u001b[39m\n\u001b[32m     79\u001b[39m     structural_damage_ratios -- HAZUS damage lookup table (see above)\n\u001b[32m     80\u001b[39m     acceleration_damage_ratios -- HAZUS damage lookup table (see above)\n\u001b[32m     81\u001b[39m     drift_damage_ratios -- HAZUS damage lookup table (see above)\n\u001b[32m     82\u001b[39m     \"\"\"\n\u001b[32m---> \u001b[39m\u001b[32m83\u001b[39m     struct_repair_ratio = structural_damage_ratios.ix[building.occupancy][building.damage_state] / \u001b[32m100.0\u001b[39m\n\u001b[32m     84\u001b[39m     accel_repair_ratio = acceleration_damage_ratios.ix[building.occupancy][building.damage_state] / \u001b[32m100.0\u001b[39m\n\u001b[32m     85\u001b[39m     drift_repair_ratio = drift_damage_ratios.ix[building.occupancy][building.damage_state] / \u001b[32m100.0\u001b[39m\n\u001b[32m     86\u001b[39m \n",
+      "\u001b[32m~/Desktop/DESaster/.venv/lib/python3.13/site-packages/pandas/core/generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, name)\u001b[39m\n\u001b[32m   6314\u001b[39m             \u001b[38;5;28;01mand\u001b[39;00m name \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01min\u001b[39;00m self._accessors\n\u001b[32m   6315\u001b[39m             \u001b[38;5;28;01mand\u001b[39;00m self._info_axis._can_hold_identifiers_and_holds_name(name)\n\u001b[32m   6316\u001b[39m         ):\n\u001b[32m   6317\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m self[name]\n\u001b[32m-> \u001b[39m\u001b[32m6318\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m object.__getattribute__(self, name)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'DataFrame' object has no attribute 'ix'"
+     ]
+    }
+   ],
    "source": [
     "owners = importEntities(env, owners_df, 'OwnerHousehold', owned_stock, write_story)"
    ]
