--- a/scenarios/aggregate_visualizations.ipynb
+++ b/scenarios/aggregate_visualizations.ipynb
@@ -14,7 +14,31 @@
     "collapsed": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:29: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:29: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "/var/folders/1l/bwjmhfhd57ddyrfdw7nl60kh0000gq/T/ipykernel_16970/654115102.py:29: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  chrome_path = 'open -a /Applications/Google\\ Chrome.app %s'\n",
+      "/var/folders/1l/bwjmhfhd57ddyrfdw7nl60kh0000gq/T/ipykernel_16970/654115102.py:29: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  chrome_path = 'open -a /Applications/Google\\ Chrome.app %s'\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'geopandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m     10\u001b[39m plt.style.use(\u001b[33m'\u001b[39m\u001b[33mbmh\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgeopandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgp\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mshapely\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mgeometry\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Point\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'geopandas'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import pandas as pd\n",
@@ -35,7 +59,7 @@
     "import numpy as np\n",
     "\n",
     "from bokeh.plotting import figure\n",
-    "from bokeh.layouts import column, widgetbox, row, gridplot, layout\n",
+    "from bokeh.layouts import column, row, gridplot, layout\n",
     "from bokeh.models import CustomJS, Slider, ColumnDataSource, ranges\n",
     "from bokeh.io import output_file, show\n",
     "import bokeh.palettes\n",
@@ -56,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -1012,7 +1036,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1026,7 +1050,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
