Replaced "none" with "no damage" to avoid nan errors

--- a/scenarios/desaster_application_template.ipynb
+++ b/scenarios/desaster_application_template.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -40,6 +40,7 @@
     "from IPython.display import display\n",
     "from ipywidgets import Dropdown\n",
     "from pathlib import Path\n",
+    "import inspect\n",
     "\n",
     "# Data analysis modules\n",
     "import pandas as pd\n",
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -293,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -331,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -356,31 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
      "id": "0a1a343c-01a9-43a3-9309-fb83ddc13acc"
     }
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'ix'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[32m/var/folders/1l/bwjmhfhd57ddyrfdw7nl60kh0000gq/T/ipykernel_17162/1548557327.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m owners = importEntities(env, owners_df, \u001b[33m'OwnerHousehold'\u001b[39m, owned_stock, write_story)\n",
-      "\u001b[32m~/Desktop/DESaster/desaster/io.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(env, entities_df, entity_type, building_stock, write_story)\u001b[39m\n\u001b[32m    141\u001b[39m         \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;28;01min\u001b[39;00m entities_df.index:\n\u001b[32m    142\u001b[39m             if entities_df.iloc[i]['Occupancy'].lower() in ['single family house', 'single family home', \n\u001b[32m    143\u001b[39m                                     \u001b[33m'single family dwelling'\u001b[39m, \u001b[33m'single family residence'\u001b[39m,\n\u001b[32m    144\u001b[39m                                     \u001b[33m'sfr'\u001b[39m, \u001b[33m'sfh'\u001b[39m, \u001b[33m'sfd'\u001b[39m, \u001b[33m'mobile home'\u001b[39m]:\n\u001b[32m--> \u001b[39m\u001b[32m145\u001b[39m                 real_property = SingleFamilyResidential(\n\u001b[32m    146\u001b[39m                                                     occupancy = entities_df.iloc[i][\u001b[33m'Occupancy'\u001b[39m],\n\u001b[32m    147\u001b[39m                                                     tenure = entities_df.iloc[i][\u001b[33m'Tenure'\u001b[39m],\n\u001b[32m    148\u001b[39m                                                     address = entities_df.iloc[i][\u001b[33m'Address'\u001b[39m],\n",
-      "\u001b[32m~/Desktop/DESaster/desaster/structures.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, owner, occupancy, tenure, address, longitude, latitude, value, cost, area, bedrooms, bathrooms, listed, damage_state, building_stock)\u001b[39m\n\u001b[32m    123\u001b[39m         Inheritance:\n\u001b[32m    124\u001b[39m         structures.Building\n\u001b[32m    125\u001b[39m         \"\"\"\n\u001b[32m    126\u001b[39m \n\u001b[32m--> \u001b[39m\u001b[32m127\u001b[39m         Building.__init__(self, owner, occupancy, tenure, address, longitude,\n\u001b[32m    128\u001b[39m                         latitude, value, cost, area,\n\u001b[32m    129\u001b[39m                         listed, damage_state, building_stock)\n\u001b[32m    130\u001b[39m \n",
-      "\u001b[32m~/Desktop/DESaster/desaster/structures.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, owner, occupancy, tenure, address, longitude, latitude, value, cost, area, listed, damage_state, building_stock)\u001b[39m\n\u001b[32m     83\u001b[39m         self.permit = \u001b[38;5;28;01mFalse\u001b[39;00m  \u001b[38;5;66;03m# Whether the building has a permit\u001b[39;00m\n\u001b[32m     84\u001b[39m         self.assessment = \u001b[38;5;28;01mFalse\u001b[39;00m  \u001b[38;5;66;03m# Whether the building has had engineering assessment\u001b[39;00m\n\u001b[32m     85\u001b[39m \n\u001b[32m     86\u001b[39m         \u001b[38;5;66;03m# Use HAZUS lookup tables to assign damage value.\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m87\u001b[39m         setStructuralDamageValueHAZUS(self)\n\u001b[32m     88\u001b[39m         self.damage_value_start = self.damage_value \u001b[38;5;66;03m# Archive original damage value\u001b[39;00m\n\u001b[32m     89\u001b[39m \n\u001b[32m     90\u001b[39m         \u001b[38;5;66;03m# Set Burton et al. recovery-based limit state\u001b[39;00m\n",
-      "\u001b[32m~/Desktop/DESaster/desaster/hazus.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(building)\u001b[39m\n\u001b[32m     79\u001b[39m     structural_damage_ratios -- HAZUS damage lookup table (see above)\n\u001b[32m     80\u001b[39m     acceleration_damage_ratios -- HAZUS damage lookup table (see above)\n\u001b[32m     81\u001b[39m     drift_damage_ratios -- HAZUS damage lookup table (see above)\n\u001b[32m     82\u001b[39m     \"\"\"\n\u001b[32m---> \u001b[39m\u001b[32m83\u001b[39m     struct_repair_ratio = structural_damage_ratios.ix[building.occupancy][building.damage_state] / \u001b[32m100.0\u001b[39m\n\u001b[32m     84\u001b[39m     accel_repair_ratio = acceleration_damage_ratios.ix[building.occupancy][building.damage_state] / \u001b[32m100.0\u001b[39m\n\u001b[32m     85\u001b[39m     drift_repair_ratio = drift_damage_ratios.ix[building.occupancy][building.damage_state] / \u001b[32m100.0\u001b[39m\n\u001b[32m     86\u001b[39m \n",
-      "\u001b[32m~/Desktop/DESaster/.venv/lib/python3.13/site-packages/pandas/core/generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, name)\u001b[39m\n\u001b[32m   6314\u001b[39m             \u001b[38;5;28;01mand\u001b[39;00m name \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01min\u001b[39;00m self._accessors\n\u001b[32m   6315\u001b[39m             \u001b[38;5;28;01mand\u001b[39;00m self._info_axis._can_hold_identifiers_and_holds_name(name)\n\u001b[32m   6316\u001b[39m         ):\n\u001b[32m   6317\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m self[name]\n\u001b[32m-> \u001b[39m\u001b[32m6318\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m object.__getattribute__(self, name)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'DataFrame' object has no attribute 'ix'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "owners = importEntities(env, owners_df, 'OwnerHousehold', owned_stock, write_story)"
    ]
@@ -394,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -423,35 +407,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HousingAssistanceFEMA.process ['self', 'entity', 'callbacks']\n",
-      "RealPropertyLoanSBA.process ['self', 'entity', 'callbacks']\n",
-      "RealPropertyLoanSBA.process ['self', 'entity', 'callbacks']\n",
-      "OwnersInsurance.process ['self', 'entity', 'callbacks']\n",
-      "InspectionProgram.process ['self', 'structure', 'entity', 'callbacks']\n",
-      "EngineeringAssessment.process ['self', 'structure', 'entity', 'callbacks']\n",
-      "PermitProgram.process ['self', 'structure', 'entity', 'callbacks']\n",
-      "RepairProgram.process ['self', 'structure', 'entity', 'callbacks']\n",
-      "DemolitionProgram.process ['self', 'structure', 'entity', 'callbacks']\n",
-      "Insurance_IA_SBA_Sequential.policy ['self', 'insurance_program', 'fema_program', 'sba_program', 'entity', 'search_patience']\n",
-      "Insurance_IA_SBA_Parallel.policy ['self', 'insurance_program', 'fema_program', 'sba_program', 'entity', 'search_patience']\n",
-      "Insurance_FirstThen_IA_SBA_Parallel.policy ['self', 'insurance_program', 'fema_program', 'sba_program', 'entity', 'search_patience']\n",
-      "Insurance_SBA_Sequential.policy ['self', 'insurance_program', 'sba_program', 'entity', 'search_patience']\n",
-      "Insurance_SBA_Parallel.policy ['self', 'insurance_program', 'sba_program', 'entity', 'search_patience']\n",
-      "RepairVacantBuilding.policy ['self', 'inspection_program', 'assessment_program', 'permit_program', 'repair_program', 'entity', 'building_stock', 'repair_probability', 'wait_time']\n"
+      "process ['self', 'entity', 'callbacks']\n",
+      "process ['self', 'entity', 'callbacks']\n",
+      "process ['self', 'entity', 'callbacks']\n",
+      "process ['self', 'entity', 'callbacks']\n",
+      "process ['self', 'structure', 'entity', 'callbacks']\n",
+      "process ['self', 'structure', 'entity', 'callbacks']\n",
+      "process ['self', 'structure', 'entity', 'callbacks']\n",
+      "process ['self', 'structure', 'entity', 'callbacks']\n",
+      "process ['self', 'structure', 'entity', 'callbacks']\n",
+      "policy ['self', 'insurance_program', 'fema_program', 'sba_program', 'entity', 'search_patience']\n",
+      "policy ['self', 'insurance_program', 'fema_program', 'sba_program', 'entity', 'search_patience']\n",
+      "policy ['self', 'insurance_program', 'fema_program', 'sba_program', 'entity', 'search_patience']\n",
+      "policy ['self', 'insurance_program', 'sba_program', 'entity', 'search_patience']\n",
+      "policy ['self', 'insurance_program', 'sba_program', 'entity', 'search_patience']\n",
+      "policy ['self', 'inspection_program', 'assessment_program', 'permit_program', 'repair_program', 'entity', 'building_stock', 'repair_probability', 'wait_time']\n"
      ]
     }
    ],
    "source": [
     "def list_args(programs_policies):\n",
     "    for p in programs_policies:\n",
-    "        print(str(p.__func__)[10:-16], inspect.getfullargspec(p).args) # Useful to determine the arguments for the recovery programs\n",
+    "        name = getattr(p, '__name__', None)\n",
+    "        if name is None and asattr(p, '__func__'):\n",
+    "            name = p.__func__.__name__\n",
+    "        print(name, inspect.getfullargspec(p).args) # Useful to determine the arguments for the recovery programs\n",
     "\n",
     "programs_policies = [fema_ia.process, sba_home_loan.process, sba_biz_loan.process, insurance.process, \n",
     "                     inspection.process, assessment.process, permitting.process, repair.process, \n",
@@ -471,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -497,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -561,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -619,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -669,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -692,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -717,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -725,7 +712,29 @@
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'money_search_start' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mUnboundLocalError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/DESaster/desaster/policies.py:650\u001b[39m, in \u001b[36mInsurance_FirstThen_IA_SBA_Parallel.policy\u001b[39m\u001b[34m(self, insurance_program, fema_program, sba_program, entity, search_patience)\u001b[39m\n\u001b[32m    648\u001b[39m \u001b[38;5;66;03m# Record the duration when entity's search for money ends without\u001b[39;00m\n\u001b[32m    649\u001b[39m \u001b[38;5;66;03m# giving up.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m650\u001b[39m search_duration = \u001b[38;5;28mself\u001b[39m.env.now - \u001b[43mmoney_search_start\u001b[49m\n\u001b[32m    652\u001b[39m \u001b[38;5;66;03m# If entity (STILL) does not have enough repair money then indicate so and\u001b[39;00m\n\u001b[32m    653\u001b[39m \u001b[38;5;66;03m# that options have been exhausted.\u001b[39;00m\n",
+      "\u001b[31mUnboundLocalError\u001b[39m: cannot access local variable 'money_search_start' where it is not associated with a value",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mUnboundLocalError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 19\u001b[39m, in \u001b[36mowner_process\u001b[39m\u001b[34m(env, inspection_program, insurance_program, fema_program, loan_program, assessment_program, permit_program, demolish_program, rebuild_program, search_stock, entity)\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     15\u001b[39m \n\u001b[32m     16\u001b[39m     \u001b[38;5;66;03m# Homeowner search for financial assistance using an Insurance_SBA policy. Note two alternate versions \u001b[39;00m\n\u001b[32m     17\u001b[39m     \u001b[38;5;66;03m# can be used: insurance_ia_sba_para, insurance_ia_sba_seq, and insurance_firstthen_ia_sba_para. \u001b[39;00m\n\u001b[32m     18\u001b[39m     \u001b[38;5;66;03m# Paste in the desired policy approach below.\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m     \u001b[38;5;28;01myield\u001b[39;00m env.process(insurance_firstthen_ia_sba_para.policy(insurance_program, fema_program,\n\u001b[32m     20\u001b[39m                                                loan_program, entity, money_patience))\n\u001b[32m     22\u001b[39m     \u001b[38;5;66;03m# If not enough money to repair home or home completely damaged, search for a new home to purchase.\u001b[39;00m\n",
+      "\u001b[31mUnboundLocalError\u001b[39m: cannot access local variable 'money_search_start' where it is not associated with a value",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mUnboundLocalError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43menv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/DESaster/.venv/lib/python3.13/site-packages/simpy/core.py:246\u001b[39m, in \u001b[36mEnvironment.run\u001b[39m\u001b[34m(self, until)\u001b[39m\n\u001b[32m    244\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    245\u001b[39m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m246\u001b[39m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    247\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m StopSimulation \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[32m    248\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m exc.args[\u001b[32m0\u001b[39m]  \u001b[38;5;66;03m# == until.value\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/DESaster/.venv/lib/python3.13/site-packages/simpy/core.py:204\u001b[39m, in \u001b[36mEnvironment.step\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    202\u001b[39m exc = \u001b[38;5;28mtype\u001b[39m(event._value)(*event._value.args)\n\u001b[32m    203\u001b[39m exc.__cause__ = event._value\n\u001b[32m--> \u001b[39m\u001b[32m204\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m exc\n",
+      "\u001b[31mUnboundLocalError\u001b[39m: cannot access local variable 'money_search_start' where it is not associated with a value"
+     ]
+    }
+   ],
    "source": [
     "env.run()"
    ]
